--- a/lib/l10n/intl_bn.arb
+++ b/lib/l10n/intl_bn.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-14 13:42:09.255871",
+  "@@last_modified": "2025-10-16 13:08:26.192955",
   "about": "সম্পর্কে",
   "@about": {
     "type": "String",
@@ -12878,6 +12878,51 @@
     "placeholders": {}
   },
   "@deselectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "startOwn": "নিজের শুরু করুন",
+  "joinCourseDesc": "প্রতিটি কোর্সে ৮-১০টি ক্রমবর্ধমান বিষয় রয়েছে যার সাথে বিভিন্ন কার্যক্রমভিত্তিক ভাষা শেখার কার্যক্রম রয়েছে।",
+  "newMessageInPangeaChat": "💬 পেঙ্গিয়া চ্যাটে নতুন বার্তা",
+  "shareCourse": "কোর্স শেয়ার করুন",
+  "addCourse": "একটি কোর্স যোগ করুন",
+  "joinCourseWithCode": "কোড দিয়ে কোর্সে যোগ দিন",
+  "joinPublicCourse": "পাবলিক কোর্সে যোগ দিন",
+  "vocabLevelsDesc": "এখানে আপনি শব্দের স্তর উন্নত করলে শব্দগুলি যাবে!",
+  "highlightVocabTooltip": "নিচের লক্ষ্য শব্দগুলো হাইলাইট করুন তাদের পাঠান বা চ্যাটে অনুশীলন করুন",
+  "@startOwn": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@newMessageInPangeaChat": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@shareCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@addCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseWithCode": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinPublicCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabLevelsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   }
