--- a/lib/l10n/intl_hi.arb
+++ b/lib/l10n/intl_hi.arb
@@ -4964,7 +4964,7 @@
   "playWithAI": "अभी के लिए एआई के साथ खेलें",
   "courseStartDesc": "पैंजिया बॉट कभी भी जाने के लिए तैयार है!\n\n...लेकिन दोस्तों के साथ सीखना बेहतर है!",
   "@@locale": "hi",
-  "@@last_modified": "2025-10-14 15:28:32.137861",
+  "@@last_modified": "2025-10-16 13:31:15.251036",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12859,6 +12859,51 @@
     "placeholders": {}
   },
   "@deselectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "startOwn": "अपना खुद का शुरू करें",
+  "joinCourseDesc": "प्रत्येक कोर्स में 8-10 अनुक्रमित विषय होते हैं जिनके साथ कार्य-आधारित भाषा सीखने की गतिविधियों की श्रृंखला होती है।",
+  "newMessageInPangeaChat": "💬 पांगेआ चैट में नया संदेश",
+  "shareCourse": "कोर्स साझा करें",
+  "addCourse": "कोर्स जोड़ें",
+  "joinCourseWithCode": "कोड के साथ कोर्स में शामिल हों",
+  "joinPublicCourse": "सार्वजनिक कोर्स में शामिल हों",
+  "vocabLevelsDesc": "यहां वे शब्द जाएंगे जब आप उन्हें स्तर देंगे!",
+  "highlightVocabTooltip": "नीचे लक्षित शब्दों को हाइलाइट करें उन्हें भेजकर या चैट में अभ्यास करके",
+  "@startOwn": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@newMessageInPangeaChat": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@shareCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@addCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseWithCode": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinPublicCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabLevelsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   }
