--- a/lib/l10n/intl_ka.arb
+++ b/lib/l10n/intl_ka.arb
@@ -3075,7 +3075,7 @@
   "playWithAI": "ამ დროისთვის ითამაშეთ AI-თან",
   "courseStartDesc": "Pangea Bot მზადაა ნებისმიერ დროს გასასვლელად!\n\n...მაგრამ სწავლა უკეთესია მეგობრებთან ერთად!",
   "@@locale": "ka",
-  "@@last_modified": "2025-10-14 15:29:02.016791",
+  "@@last_modified": "2025-10-16 13:31:36.334482",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12804,6 +12804,51 @@
     "placeholders": {}
   },
   "@deselectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "startOwn": "დაიწყე შენი საკუთარი",
+  "joinCourseDesc": "ყოველ კურსზე აქვს 8-10 სერიული თემა და სხვადასხვა დავალებებზე დაფუძნებული ენის სწავლების აქტივობები.",
+  "newMessageInPangeaChat": "💬 ახალი შეტყობინება Pangea ჩატში",
+  "shareCourse": "გააზიარე კურსი",
+  "addCourse": "დაამატე კურსი",
+  "joinCourseWithCode": "შეერთდი კურსთან კოდის საშუალებით",
+  "joinPublicCourse": "შეერთდი საჯარო კურსთან",
+  "vocabLevelsDesc": "ეს არის ადგილი, სადაც სიტყვები განთავსდება, როგორც კი მათ დონე გაუმჯობესდება!",
+  "highlightVocabTooltip": "მოწერეთ ქვემოთ მიზნობრივი სიტყვები ან პრაქტიკით გამოიყენეთ ისინი ჩატში",
+  "@startOwn": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@newMessageInPangeaChat": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@shareCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@addCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseWithCode": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinPublicCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabLevelsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   }
