--- a/lib/l10n/intl_ta.arb
+++ b/lib/l10n/intl_ta.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-14 20:34:45.787518",
+  "@@last_modified": "2025-10-16 13:32:14.869459",
   "acceptedTheInvitation": "👍 {username} அழைப்பை ஏற்றுக்கொண்டது",
   "@acceptedTheInvitation": {
     "type": "String",
@@ -11998,6 +11998,51 @@
     "placeholders": {}
   },
   "@deselectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "startOwn": "என் சொந்தத்தைத் தொடங்கு",
+  "joinCourseDesc": "ஒவ்வொரு பாடத்திலும் 8-10 வரிசைப்படுத்தப்பட்ட தலைப்புகள் மற்றும் பணிப்படிப்படையிலான மொழி கற்றல் செயல்பாடுகள் உள்ளன.",
+  "newMessageInPangeaChat": "💬 பாங்கியா சாட்டில் புதிய செய்தி",
+  "shareCourse": "பாடத்தைக் பகிரவும்",
+  "addCourse": "பாடத்தைச் சேர்க்கவும்",
+  "joinCourseWithCode": "குறியீடு கொண்டு பாடத்தில் சேரவும்",
+  "joinPublicCourse": "பொது பாடத்தில் சேரவும்",
+  "vocabLevelsDesc": "நீங்கள் அவற்றை மேம்படுத்தியபின் சொற்பொருள் வார்த்தைகள் இங்கே செல்லும்!",
+  "highlightVocabTooltip": "சொற்பொருள் வார்த்தைகளை கீழே ஹைலைட் செய்ய, அவற்றை அனுப்பவும் அல்லது சாட்டில் பயிற்சி செய்யவும்",
+  "@startOwn": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@newMessageInPangeaChat": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@shareCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@addCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseWithCode": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinPublicCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabLevelsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   }
