--- a/lib/l10n/intl_th.arb
+++ b/lib/l10n/intl_th.arb
@@ -4937,7 +4937,7 @@
   "playWithAI": "เล่นกับ AI ชั่วคราว",
   "courseStartDesc": "Pangea Bot พร้อมที่จะเริ่มต้นได้ทุกเมื่อ!\n\n...แต่การเรียนรู้ดีกว่ากับเพื่อน!",
   "@@locale": "th",
-  "@@last_modified": "2025-10-14 20:34:54.488065",
+  "@@last_modified": "2025-10-16 13:32:20.092719",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12832,6 +12832,51 @@
     "placeholders": {}
   },
   "@deselectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "startOwn": "เริ่มต้นของฉันเอง",
+  "joinCourseDesc": "แต่ละหลักสูตรมีหัวข้อเรียงลำดับ 8-10 หัวข้อ พร้อมกิจกรรมการเรียนรู้ภาษาที่ใช้ภารกิจเป็นฐาน",
+  "newMessageInPangeaChat": "📩 ข้อความใหม่ใน Pangea Chat",
+  "shareCourse": "แชร์หลักสูตร",
+  "addCourse": "เพิ่มหลักสูตร",
+  "joinCourseWithCode": "เข้าร่วมหลักสูตรด้วยรหัส",
+  "joinPublicCourse": "เข้าร่วมหลักสูตรสาธารณะ",
+  "vocabLevelsDesc": "นี่คือที่ที่คำศัพท์จะไปเมื่อคุณเลเวลอัปมันแล้ว!",
+  "highlightVocabTooltip": "เน้นคำศัพท์เป้าหมายด้านล่างโดยส่งหรือฝึกฝนกับมันในแชท",
+  "@startOwn": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@newMessageInPangeaChat": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@shareCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@addCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseWithCode": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinPublicCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabLevelsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   }
