--- a/lib/l10n/intl_el.arb
+++ b/lib/l10n/intl_el.arb
@@ -4937,7 +4937,7 @@
   "playWithAI": "Παίξτε με την Τεχνητή Νοημοσύνη προς το παρόν",
   "courseStartDesc": "Ο Pangea Bot είναι έτοιμος να ξεκινήσει οποιαδήποτε στιγμή!\n\n...αλλά η μάθηση είναι καλύτερη με φίλους!",
   "@@locale": "el",
-  "@@last_modified": "2025-10-14 15:22:10.382974",
+  "@@last_modified": "2025-10-16 13:30:44.558485",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12832,6 +12832,51 @@
     "placeholders": {}
   },
   "@deselectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "startOwn": "Ξεκίνα το δικό σου",
+  "joinCourseDesc": "Κάθε μάθημα έχει 8-10 διαδοχικά θέματα με μια σειρά δραστηριοτήτων μάθησης γλώσσας βασισμένων σε εργασίες.",
+  "newMessageInPangeaChat": "🔊 Νέο μήνυμα στο Pangea Chat",
+  "shareCourse": "Μοιράσου το μάθημα",
+  "addCourse": "Πρόσθεσε ένα μάθημα",
+  "joinCourseWithCode": "Συνδεθείτε με κωδικό μαθήματος",
+  "joinPublicCourse": "Συνδεθείτε σε δημόσιο μάθημα",
+  "vocabLevelsDesc": "Εδώ θα προστεθούν οι λέξεις λεξιλογίου μόλις τις αναβαθμίσετε!",
+  "highlightVocabTooltip": "Επισημάνετε τις στόχους λέξεις λεξιλογίου παρακάτω στέλνοντάς τες ή εξασκώντας με αυτές στη συνομιλία",
+  "@startOwn": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@newMessageInPangeaChat": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@shareCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@addCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseWithCode": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinPublicCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabLevelsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   }
