--- a/lib/l10n/intl_fa.arb
+++ b/lib/l10n/intl_fa.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-14 15:22:27.631633",
+  "@@last_modified": "2025-10-16 13:30:57.998791",
   "repeatPassword": "تکرار رمزعبور",
   "@repeatPassword": {},
   "about": "درباره",
@@ -12506,6 +12506,51 @@
     "placeholders": {}
   },
   "@deselectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "startOwn": "شروع کردن خودم",
+  "joinCourseDesc": "هر دوره شامل 8-10 موضوع متوالی با مجموعه‌ای از فعالیت‌های یادگیری زبان مبتنی بر وظایف است.",
+  "newMessageInPangeaChat": "📩 پیام جدید در چت پنگئا",
+  "shareCourse": "اشتراک‌گذاری دوره",
+  "addCourse": "افزودن دوره",
+  "joinCourseWithCode": "پیوستن به دوره با کد",
+  "joinPublicCourse": "پیوستن به دوره عمومی",
+  "vocabLevelsDesc": "اینجا جایی است که کلمات واژگان پس از ارتقاء سطح قرار می‌گیرند!",
+  "highlightVocabTooltip": "کلمات واژگان هدف را در زیر با ارسال یا تمرین در چت برجسته کنید",
+  "@startOwn": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@newMessageInPangeaChat": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@shareCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@addCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseWithCode": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinPublicCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabLevelsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   }
