--- a/lib/l10n/intl_he.arb
+++ b/lib/l10n/intl_he.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-14 15:28:28.586663",
+  "@@last_modified": "2025-10-16 13:31:12.984526",
   "about": "אודות",
   "@about": {
     "type": "String",
@@ -12823,6 +12823,51 @@
     "placeholders": {}
   },
   "@deselectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "startOwn": "התחל את שלי",
+  "joinCourseDesc": "לכל קורס יש 8-10 נושאים מסודרים עם מגוון פעילויות למידה מבוססות משימות בשפה.",
+  "newMessageInPangeaChat": "📩 הודעה חדשה בצ'אט פאנגיאה",
+  "shareCourse": "שתף קורס",
+  "addCourse": "הוסף קורס",
+  "joinCourseWithCode": "הצטרף לקורס עם קוד",
+  "joinPublicCourse": "הצטרף לקורס ציבורי",
+  "vocabLevelsDesc": "זה המקום שבו מילות אוצר המילים יופיעו לאחר שהעלית את רמתן!",
+  "highlightVocabTooltip": "הדגש את מילות אוצר המילים היעדיות למטה על ידי שליחתן או תרגול איתן בצ'אט",
+  "@startOwn": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@newMessageInPangeaChat": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@shareCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@addCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseWithCode": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinPublicCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabLevelsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   }
