--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-14 15:29:05.448915",
+  "@@last_modified": "2025-10-16 13:31:39.341446",
   "about": "소개",
   "@about": {
     "type": "String",
@@ -11882,6 +11882,51 @@
     "placeholders": {}
   },
   "@deselectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "startOwn": "나만의 시작",
+  "joinCourseDesc": "각 강좌에는 8-10개의 순차적인 주제와 다양한 과제 기반 언어 학습 활동이 포함되어 있습니다.",
+  "newMessageInPangeaChat": "💬 Pangea 채팅에 새 메시지",
+  "shareCourse": "강좌 공유",
+  "addCourse": "강좌 추가",
+  "joinCourseWithCode": "코드로 강좌 참여",
+  "joinPublicCourse": "공개 강좌 참여",
+  "vocabLevelsDesc": "단어를 레벨업하면 여기에 단어가 표시됩니다!",
+  "highlightVocabTooltip": "아래 대상 어휘를 채팅에서 보내거나 연습하여 강조 표시하세요",
+  "@startOwn": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@newMessageInPangeaChat": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@shareCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@addCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseWithCode": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinPublicCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabLevelsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   }
