--- a/lib/l10n/intl_nb.arb
+++ b/lib/l10n/intl_nb.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-14 15:29:17.136110",
+  "@@last_modified": "2025-10-16 13:31:46.932073",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -12867,6 +12867,51 @@
     "placeholders": {}
   },
   "@deselectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "startOwn": "Start min egen",
+  "joinCourseDesc": "Hvert kurs har 8-10 sekvenserte emner med en rekke oppgavebaserte språklæringsaktiviteter.",
+  "newMessageInPangeaChat": "🗨️ Ny melding i Pangea Chat",
+  "shareCourse": "Del kurs",
+  "addCourse": "Legg til et kurs",
+  "joinCourseWithCode": "Bli med på kurs med kode",
+  "joinPublicCourse": "Bli med på offentlig kurs",
+  "vocabLevelsDesc": "Dette er hvor vokabularord vil komme når du har nivåert dem opp!",
+  "highlightVocabTooltip": "Uthev målordene nedenfor ved å sende dem eller øve med dem i chatten",
+  "@startOwn": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@newMessageInPangeaChat": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@shareCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@addCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseWithCode": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinPublicCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabLevelsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   }
