--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "pl",
-  "@@last_modified": "2025-10-14 15:29:23.909810",
+  "@@last_modified": "2025-10-16 13:31:52.022877",
   "about": "O aplikacji",
   "@about": {
     "type": "String",
@@ -11774,6 +11774,51 @@
     "placeholders": {}
   },
   "@deselectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "startOwn": "Rozpocznij własny",
+  "joinCourseDesc": "Każdy kurs składa się z 8-10 sekwencyjnych tematów z różnorodnymi zadaniami do nauki języka.",
+  "newMessageInPangeaChat": "📝 Nowa wiadomość w Pangea Chat",
+  "shareCourse": "Udostępnij kurs",
+  "addCourse": "Dodaj kurs",
+  "joinCourseWithCode": "Dołącz do kursu za pomocą kodu",
+  "joinPublicCourse": "Dołącz do kursu publicznego",
+  "vocabLevelsDesc": "To tutaj pojawią się słowa słownictwa, gdy je podniesiesz na wyższy poziom!",
+  "highlightVocabTooltip": "Podświetl docelowe słowa słownictwa poniżej, wysyłając je lub ćwicząc z nimi na czacie",
+  "@startOwn": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@newMessageInPangeaChat": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@shareCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@addCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseWithCode": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinPublicCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabLevelsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   }
