--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-14 15:29:26.823560",
+  "@@last_modified": "2025-10-16 13:31:54.004418",
   "copiedToClipboard": "Copiada para a área de transferência",
   "@copiedToClipboard": {
     "type": "String",
@@ -12874,6 +12874,51 @@
     "placeholders": {}
   },
   "@deselectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "startOwn": "Comece o seu próprio",
+  "joinCourseDesc": "Cada curso tem de 8 a 10 tópicos sequenciais com uma variedade de atividades de aprendizagem de idiomas baseadas em tarefas.",
+  "newMessageInPangeaChat": "📩 Nova mensagem no Pangea Chat",
+  "shareCourse": "Compartilhar curso",
+  "addCourse": "Adicionar um curso",
+  "joinCourseWithCode": "Entrar no curso com código",
+  "joinPublicCourse": "Entrar no curso público",
+  "vocabLevelsDesc": "É aqui que as palavras de vocabulário irão aparecer assim que você as evoluir!",
+  "highlightVocabTooltip": "Destaque as palavras de vocabulário alvo abaixo enviando-as ou praticando com elas no chat",
+  "@startOwn": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@newMessageInPangeaChat": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@shareCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@addCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseWithCode": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinPublicCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabLevelsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   }
