--- a/lib/l10n/intl_te.arb
+++ b/lib/l10n/intl_te.arb
@@ -2401,7 +2401,7 @@
   "playWithAI": "ఇప్పుడే AI తో ఆడండి",
   "courseStartDesc": "పాంజియా బాట్ ఎప్పుడైనా సిద్ధంగా ఉంటుంది!\n\n...కానీ స్నేహితులతో నేర్చుకోవడం మెరుగైనది!",
   "@@locale": "te",
-  "@@last_modified": "2025-10-14 20:34:50.090769",
+  "@@last_modified": "2025-10-16 13:32:18.059294",
   "@setCustomPermissionLevel": {
     "type": "String",
     "placeholders": {}
@@ -12863,6 +12863,51 @@
     "placeholders": {}
   },
   "@deselectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "startOwn": "నాకు స్వంతంగా ప్రారంభించండి",
+  "joinCourseDesc": "ప్రతి కోర్సుకు 8-10 వరుసగా ఉన్న విషయాలు ఉంటాయి, వాటితో పాటు టాస్క్ ఆధారిత భాషా అభ్యాస కార్యకలాపాలు ఉంటాయి.",
+  "newMessageInPangeaChat": "💬 పాంగియా చాట్‌లో కొత్త సందేశం",
+  "shareCourse": "కోర్సును పంచుకోండి",
+  "addCourse": "కోర్సును జోడించండి",
+  "joinCourseWithCode": "కోడ్‌తో కోర్సులో చేరండి",
+  "joinPublicCourse": "పబ్లిక్ కోర్సులో చేరండి",
+  "vocabLevelsDesc": "మీరు వాటిని లెవెల్ చేయగానే ఇది వాక్యబోధన పదాలు అక్కడికి పోతాయి!",
+  "highlightVocabTooltip": "గమ్య వాక్యబోధన పదాలను క్రింద హైలైట్ చేయండి, వాటిని పంపడం లేదా చాట్‌లో ప్రాక్టీస్ చేయడం ద్వారా",
+  "@startOwn": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@newMessageInPangeaChat": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@shareCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@addCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinCourseWithCode": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@joinPublicCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@vocabLevelsDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@highlightVocabTooltip": {
     "type": "String",
     "placeholders": {}
   }
